<resources>

    <string name="app_name">Hunt The Wumpus</string>

    <string name="app_error_message">Error loading data. Yikes!</string>

    <string name="Start">Start</string>
    <string name="LeaderBoards">Leader Boards</string>
    <string name="Options">Options</string>

    <string name="Move">Move</string>
    <string name="Shoot">Shoot</string>
    <string name="GoBack">Go Back</string>

    <string name="North">North</string>
    <string name="East">East</string>
    <string name="South">South</string>
    <string name="West">West</string>

</resources>
