<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8sp"
        android:background="@mipmap/ic_start"
        tools:layout_editor_absoluteX="8dp"
        >


        <Button
            android:id="@+id/btn_GoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/GoBack"
            android:textSize="20sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8sp"
            android:background="@mipmap/ic_start"
            tools:layout_editor_absoluteX="8dp"
            >


            <Button
                android:id="@+id/btn_North"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/North"
                android:textSize="20sp"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/btn_East"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:paddingRight="0dp"
                android:text="@string/East"
                android:textSize="20sp"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/btn_South"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/South"
                android:textSize="22sp"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/btn_West"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/West"
                android:textSize="22sp"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/btn_Shoot"
                android:layout_width="190dp"
                android:layout_height="65dp"
                android:layout_gravity="bottom"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/Move"
                android:textSize="22sp"
                android:visibility="visible"
                />


            <Button
                android:id="@+id/btn_Direction"
                android:layout_width="190dp"
                android:layout_height="65dp"
                android:layout_gravity="bottom"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/Shoot"
                android:textSize="22sp"
                android:visibility="visible"
                />


        </LinearLayout>

    </LinearLayout>



</android.support.v4.widget.DrawerLayout>