<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trevorspear.huntthewumpus.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:padding="8sp"
        android:background="@mipmap/ic_Start"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        >


        <Button
            android:id="@+id/btn_Start"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/Start"
            android:textSize="22sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_LeaderBoards"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/LeaderBoards"
            android:textSize="22sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_Options"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Options"
            android:textSize="22sp"
            android:layout_gravity="center"
            />


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
